tests/ui/inline-const/cross-const-control-flow-125846.stderr
error[E0767]: use of unreachable label `'a`
  --> $DIR/cross-const-control-flow-125846.rs:9:25
   |
LL |     'a: { const { break 'a } }
   |     --                  ^^ unreachable label `'a`
   |     |
   |     unreachable label defined here
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0767]: use of unreachable label `'a`
  --> $DIR/cross-const-control-flow-125846.rs:22:28
   |
LL |     'a: { const { continue 'a } }
   |     --                     ^^ unreachable label `'a`
   |     |
   |     unreachable label defined here
   |
   = note: labels are unreachable through functions, closures, async blocks and modules

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/cross-const-control-flow-125846.rs:41:14
   |
LL |     const { &x };
   |              ^ non-constant value
   |
help: consider using `const` instead of `let`
   |
LL -     let x = 1;
LL +     const x: /* Type */ = 1;
   |

error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> $DIR/cross-const-control-flow-125846.rs:35:22
   |
LL |     const { async {}.await }
   |           -----------^^^^^--
   |           |          |
   |           |          only allowed inside `async` functions and blocks
   |           this is not `async`

error[E0572]: return statement outside of function body
  --> $DIR/cross-const-control-flow-125846.rs:4:13
   |
LL | / fn foo() {
LL | |     const { return }
   | |           --^^^^^^-- the return is part of this body...
LL | |
LL | | }
   | |_- ...not the enclosing function body

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/cross-const-control-flow-125846.rs:9:19
   |
LL |     'a: { const { break 'a } }
   |                   ^^^^^^^^ cannot `break` outside of a loop or labeled block

error[E0268]: `break` outside of a loop or labeled block
  --> $DIR/cross-const-control-flow-125846.rs:16:17
   |
LL |         const { break }
   |                 ^^^^^ cannot `break` outside of a loop or labeled block

error[E0268]: `continue` outside of a loop
  --> $DIR/cross-const-control-flow-125846.rs:22:19
   |
LL |     'a: { const { continue 'a } }
   |                   ^^^^^^^^^^^ cannot `continue` outside of a loop

error[E0268]: `continue` outside of a loop
  --> $DIR/cross-const-control-flow-125846.rs:29:17
   |
LL |         const { continue }
   |                 ^^^^^^^^ cannot `continue` outside of a loop

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0268, E0435, E0572, E0728, E0767.
For more information about an error, try `rustc --explain E0268`.
